added some content and things that do stuff

--- a/index.html
+++ b/index.html
@@ -1,32 +1,99 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-<head>
-<title>Welcome to nginx on Debian!</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
-</head>
-<body>
-<h1>Welcome to nginx on Debian!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working on Debian. Further configuration is required.</p>
+   <head>
+   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+      <title>
+         endpoint - cannot find the damn server
+      </title>
 
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a></p>
+
+   
+
+
+
+<style type="text/css">
+A:link {
+ FONT: 10pt verdana; COLOR: red;  background-color: #c8c8c8;
+}
+A:visited {
+ FONT: 10pt  verdana; COLOR: red;  background-color: #c8c8c8; 
+}
+H1 { FONT: 13pt/15pt verdana; COLOR: black; background-color: #c8c8c8;  }
+
+P { FONT: 10pt verdana; COLOR: black; background-color: #c8c8c8; text-align: justify; }
+
+LI { FONT: 10pt verdana; COLOR: black; background-color: #c8c8c8;  text-align: justify; }
+
+body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
+</style>
+   </head>
+
+   <body>
+      <table bgcolor="#ededed" width="100%" border="0" align="center">
+      <tr valign="top"><td valign="top">
+      <table bgcolor="#c8c8c8" cellspacing="5" cellpadding="3" width="960" border="0" align="center">
+         <tbody>
+            <tr>
+               <td id="tableProps" valign="top" align="right" >
+                  <img alt="" id="pagerrorImg" height="33"
+		  src="pagerror.gif" width="25" align="left"> 
+                  <h1>
+                     <span align="right">This page sucks and cannot be displayed</span>
+                  </h1>
+               </td>
+	       <td width="120">&nbsp;</td>
+            </tr>
+            <tr>
+               <td>
+                  <p>
+                     The page you are looking for sucks and is currently unavailable. The Web site might be experiencing technical
+                     difficulties, you may need to adjust your browser settings or it might suck.
+                  </p>
+               </td>
+	       <td width="220">&nbsp;</td>
+            </tr>
+            <tr>
+               <td>
+                  <hr noshade>
+                  <p>
+                     Please try the following:
+                  </p>
+                  <ul>
+	     	  <li>
+                        Click the <a target="_self" href="javascript:location.reload()"><img height="16" alt=
+                        "refresh.gif (82 bytes)" src="refresh.gif" width="13" align="middle" border="0"></a> <a href=
+                        "index2.php">Refresh</a> button, or smash your computer with a large hammer.
+                     </li>
+
+
+
+
+                     <li id="list3">
+                        Click the <a href="javascript:history.back(1)"><img src="back.gif" alt="" border="0" align="bottom">
+                        Back</a> button to try another link.
+                     </li>
+                  </ul>
+
+                  <br>
+                   
+                  <p>
+                     Cannot find server or DNS Error
+                     <br>
+                  </p>
+<p>
 
 <p>
-      Please use the <tt>reportbug</tt> tool to report bugs in the
-      nginx package with Debian. However, check <a
-      href="http://bugs.debian.org/cgi-bin/pkgreport.cgi?ordering=normal;archive=0;src=nginx;repeatmerged=0">existing
-      bug reports</a> before reporting a new bug.
-</p>
-
-<p><em>Thank you for using debian and nginx.</em></p>
-
+<hr>
+</td>
+            </tr>
+         </tbody>
+      </table>
+<!-- Hintergrundtabelle -->
+</td>
+            </tr>
+      </table>
 
 </body>
 </html>
+
+
