added some more thing. Hecking Bamboozled!

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
 	     	  <li>
                         Click the <a target="_self" href="javascript:location.reload()"><img height="16" alt=
                         "refresh.gif (82 bytes)" src="refresh.gif" width="13" align="middle" border="0"></a> <a href=
-                        "index2.php">Refresh</a> button, or smash your computer with a large hammer.
+                        "index.html">Refresh</a> button, or smash your computer with a large hammer.
                      </li>
 
 
@@ -71,6 +71,14 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                      <li id="list3">
                         Click the <a href="javascript:history.back(1)"><img src="back.gif" alt="" border="0" align="bottom">
                         Back</a> button to try another link.
+                     </li>
+
+                     <li id="list4">
+                        Mein GPG Fingerprint:9F6846EB54A74D2C 
+                     </li>
+
+                     <li>
+                        Mein GitHub <a href="https://github.com/einfachtorben">klickst du hier!</a>
                      </li>
                   </ul>
 
