fixed some typos

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                      </li>
 
                      <li id="list4">
-                        Mein GPG Fingerprint:9F6846EB54A74D2C 
+                        My GPG Fingerprint:9F6846EB54A74D2C 
                      </li>
 
                      <li>
-                        Mein GitHub <a href="https://github.com/einfachtorben">klickst du hier!</a>
+                        My GitHub <a href="https://github.com/einfachtorben">klickst du hier!</a>
                      </li>
                   </ul>
 
