--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                      </li>
 
                      <li>
-                        My GitHub <a href="https://github.com/einfachtorben">klickst du hier!</a>
+                        My GitHub <a href="https://github.com/einfachtorben">click here!</a>
                      </li>
                   </ul>
 
