--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                      </li>
 
                      <li id="list4">
-                        My GPG Fingerprint: 9F6846EB54A74D2C 
+                        My GPG Fingerprint: <a href="https://keyserver.mattrude.com/key/0x9F6846EB54A74D2C">9F6846EB54A74D2C </a>
                      </li>
 
                      <li>
