--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                    
                   <p>
                      Cannot find server or DNS Error
+		     Or Maybe you just reached the las page of the internet. Who knows?
                      <br>
                   </p>
 <p>
