updated index.html (again, sadly)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                    
                   <p>
                      Cannot find server or DNS Error
-		     Or Maybe you just reached the las page of the internet. Who knows?
+		     Or maybe you reached the last page of the internet. Who knows?
                      <br>
                   </p>
 <p>
