updated index.html (this seems to be a thing now?)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                   <br>
                    
                   <p>
-                     Cannot find server or DNS Error
+                     Cannot find server or DNS Error<br>
 		     Or maybe you reached the last page of the internet. Who knows?
                      <br>
                   </p>
