--- a/resume.html
+++ b/resume.html
@@ -51,8 +51,18 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                   </p>
                </td>
 	       <td width="220">&nbsp;</td>
+
+                  <p>
+                     Cannot find server or DNS Error<br>
+		     Or maybe you reached the last page of the internet. Who knows?
+                     <br>
+                  </p>
+<p>
+
+<p>
+<hr>
+</td>
             </tr>
-            
          </tbody>
       </table>
 <!-- Hintergrundtabelle -->
