started to create my resume

--- a/resume.html
+++ b/resume.html
@@ -51,16 +51,21 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
                   </p>
                </td>
 	       <td width="220">&nbsp;</td>
-
+            </tr>
+            <tr>
+               <td>
+                <hr noshade>
+                    <ul>
+                        <li>Here my resume will rise!</li>
+                    </ul>
+                <hr noshade>
                   <p>
                      Cannot find server or DNS Error<br>
 		     Or maybe you reached the last page of the internet. Who knows?
                      <br>
                   </p>
 <p>
-
 <p>
-<hr>
 </td>
             </tr>
          </tbody>
