added back icon and link to resume.html

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
    <head>
    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
       <title>
-         endpoint - cannot find the damn server
+         resume - cannot find the damn server
       </title>
 
 
@@ -36,7 +36,8 @@ body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
             <tr>
                <td id="tableProps" valign="top" align="right" >
                   <img alt="" id="pagerrorImg" height="33"
-		  src="pagerror.gif" width="25" align="left"> 
+          src="pagerror.gif" width="25" align="left"> <a href="index.html"><img alt="" id="pageBackImg" 
+          height="33" src="WMSUI32_2226.ico" width="25" align="left"></a>
                   <h1>
                      <span align="right">This page sucks and cannot be displayed</span>
                   </h1>
