Added backend and auth with Firebase

--- a/index.html
+++ b/index.html
@@ -1,111 +1,140 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-   <head>
+
+<head>
    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
-      <title>
-         endpoint - cannot find the damn server
-      </title>
-
-
-   
-
-
-
-<style type="text/css">
-A:link {
- FONT: 10pt verdana; COLOR: red;  background-color: #c8c8c8;
-}
-A:visited {
- FONT: 10pt  verdana; COLOR: red;  background-color: #c8c8c8; 
-}
-H1 { FONT: 13pt/15pt verdana; COLOR: black; background-color: #c8c8c8;  }
-
-P { FONT: 10pt verdana; COLOR: black; background-color: #c8c8c8; text-align: justify; }
-
-LI { FONT: 10pt verdana; COLOR: black; background-color: #c8c8c8;  text-align: justify; }
-
-body { FONT: 10pt verdana; COLOR: black;  background-color: #ededed; }
-</style>
-   </head>
-
-   <body>
-      <table bgcolor="#ededed" width="100%" border="0" align="center">
-      <tr valign="top"><td valign="top">
-      <table bgcolor="#c8c8c8" cellspacing="5" cellpadding="3" width="960" border="0" align="center">
-         <tbody>
-            <tr>
-               <td id="tableProps" valign="top" align="right" >
-                  <img alt="" id="pagerrorImg" height="33"
-		  src="pagerror.gif" width="25" align="left"> 
-                  <h1>
-                     <span align="right">This page sucks and cannot be displayed</span>
-                  </h1>
-               </td>
-	       <td width="120">&nbsp;</td>
-            </tr>
-            <tr>
-               <td>
-                  <p>
-                     The page you are looking for sucks and is currently unavailable. The Web site might be experiencing technical
-                     difficulties, you may need to adjust your browser settings or it might suck.
-                  </p>
-               </td>
-	       <td width="220">&nbsp;</td>
-            </tr>
-            <tr>
-               <td>
-                  <hr noshade>
-                  <p>
-                     Please try the following:
-                  </p>
-                  <ul>
-	     	  <li>
-                        Click the <a target="_self" href="javascript:location.reload()"><img height="16" alt=
-                        "refresh.gif (82 bytes)" src="refresh.gif" width="13" align="middle" border="0"></a> <a href=
-                        "index.html">Refresh</a> button, or smash your computer with a large hammer.
-                     </li>
+   <title>
+      endpoint - cannot find the damn server
+   </title>
 
 
 
 
-                     <li id="list3">
-                        Click the <a href="javascript:history.back(1)"><img src="back.gif" alt="" border="0" align="bottom">
-                        Back</a> button to try another link.
-                     </li>
 
-                     <li id="list4">
-                        My GPG Fingerprint: <a href="https://keyserver.mattrude.com/key/0x9F6846EB54A74D2C">9F6846EB54A74D2C </a>
-                     </li>
 
-                     <li>
-                        My GitHub <a href="https://github.com/einfachtorben">click here!</a>
-                     </li>
-                     <li>
-                        My <a href="resume.html">resume</a> 
-                     </li>
-                  </ul>
+   <style type="text/css">
+      A:link {
+         FONT: 10pt verdana;
+         COLOR: red;
+         background-color: #c8c8c8;
+      }
 
-                  <br>
-                   
-                  <p>
-                     Cannot find server or DNS Error<br>
-		     Or maybe you reached the last page of the internet. Who knows?
-                     <br>
-                  </p>
-<p>
+      A:visited {
+         FONT: 10pt verdana;
+         COLOR: red;
+         background-color: #c8c8c8;
+      }
 
-<p>
-<hr>
-</td>
-            </tr>
-         </tbody>
-      </table>
-<!-- Hintergrundtabelle -->
-</td>
-            </tr>
-      </table>
+      H1 {
+         FONT: 13pt/15pt verdana;
+         COLOR: black;
+         background-color: #c8c8c8;
+      }
+
+      P {
+         FONT: 10pt verdana;
+         COLOR: black;
+         background-color: #c8c8c8;
+         text-align: justify;
+      }
+
+      LI {
+         FONT: 10pt verdana;
+         COLOR: black;
+         background-color: #c8c8c8;
+         text-align: justify;
+      }
+
+      body {
+         FONT: 10pt verdana;
+         COLOR: black;
+         background-color: #ededed;
+      }
+   </style>
+</head>
+
+<body>
+   <table bgcolor="#ededed" width="100%" border="0" align="center">
+      <tr valign="top">
+         <td valign="top">
+            <table bgcolor="#c8c8c8" cellspacing="5" cellpadding="3" width="960" border="0" align="center">
+               <tbody>
+                  <tr>
+                     <td id="tableProps" valign="top" align="right">
+                        <img alt="" id="pagerrorImg" height="33" src="pagerror.gif" width="25" align="left">
+                        <h1>
+                           <span align="right">This page sucks and cannot be displayed</span>
+                        </h1>
+                     </td>
+                     <td width="120">&nbsp;</td>
+                  </tr>
+                  <tr>
+                     <td>
+                        <p>
+                           The page you are looking for sucks and is currently unavailable. The Web site might be
+                           experiencing technical
+                           difficulties, you may need to adjust your browser settings or it might suck. Login to backend
+                           <a href=login.html> Here </a>
+                        </p>
+                     </td>
+                     <td width="220">&nbsp;</td>
+                  </tr>
+                  <tr>
+                     <td>
+                        <hr noshade>
+                        <p>
+                           Please try the following:
+                        </p>
+                        <ul>
+                           <li>
+                              Click the <a target="_self" href="javascript:location.reload()"><img height="16"
+                                    alt="refresh.gif (82 bytes)" src="refresh.gif" width="13" align="middle"
+                                    border="0"></a> <a href="index.html">Refresh</a> button, or smash your computer with
+                              a large hammer.
+                           </li>
+
+
+
+
+                           <li id="list3">
+                              Click the <a href="javascript:history.back(1)"><img src="back.gif" alt="" border="0"
+                                    align="bottom">
+                                 Back</a> button to try another link.
+                           </li>
+
+                           <li id="list4">
+                              My GPG Fingerprint: <a
+                                 href="https://keyserver.mattrude.com/key/0x9F6846EB54A74D2C">9F6846EB54A74D2C </a>
+                           </li>
+
+                           <li>
+                              My GitHub <a href="https://github.com/einfachtorben">click here!</a>
+                           </li>
+                           <li>
+                              My <a href="resume.html">resume</a>
+                           </li>
+                        </ul>
+
+                        <br>
+
+                        <p>
+                           Cannot find server or DNS Error<br>
+                           Or maybe you reached the last page of the internet. Who knows?
+                           <br>
+                        </p>
+                        <p>
+
+                           <p>
+                              <hr>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+            <!-- Hintergrundtabelle -->
+         </td>
+      </tr>
+   </table>
 
 </body>
+
 </html>
-
-
