--- a/login.html
+++ b/login.html
@@ -5,13 +5,12 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-auth.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-database.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
     <script src="init-firebase.js"></script>
 
     <script>
-
 
         // Initialize the FirebaseUI Widget using Firebase.
         var ui = new firebaseui.auth.AuthUI(firebase.auth());
