--- a/backend.html
+++ b/backend.html
@@ -2,73 +2,63 @@
 <html>
 
 <head>
-    <title> Backend! </title>
+    <title>Backend!</title>
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-database.js"></script>
 
-
     <script src="init-firebase.js"></script>
 
     <script>
-
         var db = firebase.database();
 
         function checkRole(userId) {
-            firebase.database().ref('/users/' + userId).once('value').then(function (snapshot) {
-                console.log(snapshot);
-                //if (snapshot.val = null) {
-                //    window.location.replace("https://www.friedel.me")
-                //}
-                role = snapshot.val().role;
-                if (role == "Admin") {
-                    //everything fine
-                } else {
-                    //window.location.replace("https://www.friedel.me/")
-                }
-            });
-
-
+            firebase
+                .database()
+                .ref("/users/" + userId)
+                .once("value")
+                .then(function (snapshot) {
+                    console.log(snapshot);
+                    if ((snapshot.val == null)) {
+                        window.location.replace("/");
+                    }
+                    role = snapshot.val().role;
+                    if (role == "Admin") {
+                        //everything fine
+                    } else {
+                        //window.location.replace("/")
+                    }
+                });
         }
 
         firebase.auth().onAuthStateChanged(user => {
             if (user) {
-                localStorage.setItem('myPage.expectSignIn', '1')
+                localStorage.setItem("myPage.expectSignIn", "1");
                 checkRole(user.uid);
-
             } else {
-                localStorage.removeItem('myPage.expectSignIn')
-                window.alert("You are not logged in! You will be redirected in any moment to the login page.")
-                window.location.replace("https://www.friedel.me/login.html")
-
+                localStorage.removeItem("myPage.expectSignIn");
+                window.alert(
+                    "You are not logged in! You will be redirected in any moment to the login page."
+                );
+                window.location.replace("/login.html");
             }
-        })
-
-
-
-
+        });
 
         function writeUserData(userId, email, role) {
-            firebase.database().ref("users/" + userId).set({
-                //username: name,
-                email: email,
-                role: role
-
-            });
+            firebase
+                .database()
+                .ref("users/" + userId)
+                .set({
+                    //username: name,
+                    email: email,
+                    role: role
+                });
         }
-
-
-
     </script>
-
 </head>
 
-<body>
-
-
-
-</body>
+<body></body>
 
 </html>
